--- a/tu/about/index.html
+++ b/tu/about/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
     <head><meta charset='utf-8'>
-<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಸೆಲೆದ ಉಪಕ್ರಮ'><title>About</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'><meta name='description' content='ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಷೆಲೆದ ಉಪಕ್ರಮ'><title>About</title>
 
 <link rel='canonical' href='https://idclang.github.io/tu/about/'>
 
 <link rel="stylesheet" href="/scss/style.min.css"><meta property='og:title' content='About'>
-<meta property='og:description' content='ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಸೆಲೆದ ಉಪಕ್ರಮ'>
+<meta property='og:description' content='ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಷೆಲೆದ ಉಪಕ್ರಮ'>
 <meta property='og:url' content='https://idclang.github.io/tu/about/'>
 <meta property='og:site_name' content='ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಸೆಲೆನ ಉಪಕ್ರಮ'>
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="About">
-<meta name="twitter:description" content="ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಸೆಲೆದ ಉಪಕ್ರಮ">
+<meta name="twitter:description" content="ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಷೆಲೆದ ಉಪಕ್ರಮ">
 <script type="application/javascript">
 var doNotTrack = false;
 if (!doNotTrack) {
@@ -227,7 +227,7 @@ if (!doNotTrack) {
 
     
     <h3 class="article-subtitle">
-        ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಸೆಲೆದ ಉಪಕ್ರಮ
+        ದ್ರಾವಿಡ ಸಂಸ್ಕೃತಿ ಬೊಕ್ಕ ಬಾಷೆಲೆದ ಉಪಕ್ರಮ
     </h3>
     </div>
 </header>
