--- a/kn/p/ಮಾಹಿತಿ/index.html
+++ b/kn/p/ಮಾಹಿತಿ/index.html
@@ -305,7 +305,8 @@ if (!doNotTrack) {
 <a class="link" href="https://www.youtube.com/channel/UC_xQ83x2V3Oj5uWfLbUK8Tg"  target="_blank" rel="noopener"
     >Youtube</a>
 |
-<a class="link" href="shttps://www.facebook.com/dclp.lang.3/" >Facebook</a></p>
+<a class="link" href="https://www.facebook.com/dclp.lang.3/"  target="_blank" rel="noopener"
+    >Facebook</a></p>
 
 </section>
 
