--- a/ml/p/സുറിയാനി-മലയാളം/index.html
+++ b/ml/p/സുറിയാനി-മലയാളം/index.html
@@ -285,7 +285,7 @@ if (!doNotTrack) {
     <section class="article-content">
     <h1 id="സറയഩ-മലയള">സുറിയാഩി മലയാളം</h1>
 <p>എഴുതിയത്: ദ്ര.ക.മൊ.ഉ എഡിറ്റർ</p>
-<p><em>ഈ കുറിപ്പ് <a class="link" href="/p/suriyani-malayalam/" >ഇങ്കിരീസ് മൊഴിയുലും</a> വായിക്കാവുന്നതാണ്</em></p>
+<p>മൊഴികള്‍: <a class="link" href="/p/suriyani-malayalam/" >ഇങ്കിരീസ്</a></p>
 <p><strong>കിഴക്കന്‍ സുറിയാഩി</strong> എഴുത്തിഩെ അടിത്തറയാക്കി എഴുതിവരുന്ന മലയാളത്തിന്റെ ഒരു വകമൊഴിയാണ് <strong>സുറിയാഩി മലയാളം</strong>. കര്‍സോഩി മലയാളം എന്നും സിറിയാക് മലയാളം എന്നും ഇത് അറിയപ്പെടുന്നു. കേരളത്തിലെ സുറിയാഩി അല്ലെങ്കില്‍ നസ്രാണി എന്നറിയപ്പെടുന്ന ക്രിസ്തീയ മുറയുടെ വേള്‍വിമുറവക മൊഴിയാണ് സുറിയാഩി മലയാളം.
 മലയാളമൊഴിയുടെ ചട്ടങ്ങള്‍ പിന്തുടരുന്ന ഈ മൊഴിയില്‍ ഒരുപാട് സുറിയാഩി വാക്കുകള്‍ നിലനില്‍ക്കുന്നു. പത്തൊമ്പതാം നൂറ്റാണ്ട് വരെ സുറിയാഩി മലയാളം മികച്ച വകയില്‍ നടപ്പിലുണ്ടായിരുന്നു.</p>
 <h2 id="എഴതത-തറ">എഴുത്തു തിറം</h2>
