--- a/p/suriyani-malayalam/index.html
+++ b/p/suriyani-malayalam/index.html
@@ -285,7 +285,7 @@ if (!doNotTrack) {
     <section class="article-content">
     <h1 id="suriyani-malayalam">Suriyani Malayalam</h1>
 <p>Author: IDCL Editor</p>
-<p>This article is available in <a class="link" href="/ml/p/%e0%b4%b8%e0%b5%81%e0%b4%b1%e0%b4%bf%e0%b4%af%e0%b4%be%e0%b4%a8%e0%b4%bf-%e0%b4%ae%e0%b4%b2%e0%b4%af%e0%b4%be%e0%b4%b3%e0%b4%82/" >Malayalam language</a> .</p>
+<p>Languages: <a class="link" href="/ml/p/%e0%b4%b8%e0%b5%81%e0%b4%b1%e0%b4%bf%e0%b4%af%e0%b4%be%e0%b4%a8%e0%b4%bf-%e0%b4%ae%e0%b4%b2%e0%b4%af%e0%b4%be%e0%b4%b3%e0%b4%82/" >Malayalam</a> .</p>
 <p><strong>Suriyani Malayalam</strong> is a liturgical variant of the Malayalam language written with a modified version of the East Syriac script. It is also known as Karshoni or Syriac Malayalam. Suriyani Malayalam is related to the traditional Christian community of Kerala, known by the names Nasranis and Suriyanis. It follows the grammar of the Malayalam language and uses a lot of loan words from East Syriac. It continued as a prominent variety of Malayalam unto the 19th Century.</p>
 <h2 id="the-script">The Script</h2>
 <p><strong>Type of writing system</strong>: Abjad
@@ -579,7 +579,7 @@ if (!doNotTrack) {
         
 
         <div class="article-details">
-            <h2 class="article-title">Gondi and its Orthography</h2>
+            <h2 class="article-title">Gunjala Gondi</h2>
         </div>
     </a>
 </article>
