--- a/kn/project/suyi-font/index.html
+++ b/kn/project/suyi-font/index.html
@@ -145,7 +145,7 @@ if (!doNotTrack) {
       </div>
       <div class="col-md-4">
         <div class="project-details">
-          <h4>Project Details</h4>
+          <h4>ಯೋಜನೆಯ ವಿವರಗಳು</h4>
           <ul>
             
             <li><span>ಲಿಪಿ :</span> <strong>ತುಳು ಲಿಪಿ</strong></li>
