--- a/ml/faq/index.html
+++ b/ml/faq/index.html
@@ -90,7 +90,7 @@ if (!doNotTrack) {
                   <li><a href="/ml/service/">ഊഴിയങ്ങള്‍</a></li><li><a href="/ml/faq/" class="current">അ.കേ.വി</a></li>
                 </ul>
               </li>
-              <li><a href="/ml/contact/">ഇടപെടുക</a></li>
+              <li><a href="/ml/contact/">ഇടപഴകുക</a></li>
 
               
               <li>
@@ -167,10 +167,10 @@ if (!doNotTrack) {
         <h3 id="ദരമള-കലമറയകക-മഴകളകകമയളള-തടമന">ദ്രമിള കലമുറയ്ക്കും മൊഴികള്‍ക്കുമായുള്ള തുടമാനം</h3>
 <p>കാക്കുക കേമമാക്കുക <br><br></p>
 <h4 id="1-ദരകമത-വല-ഒര-കറപപ-ഇടനനതന">1. ദ്ര.ക.മൊ.തു വില്‍ ഒരു കുറിപ്പ് ഇടുന്നതിന്</h4>
-<p>ഈ ഇയനിലത്തില്‍ ഒരു കുറിപ്പ് ഇടുന്നതിനായി ഞങ്ങളെ അറിയിക്കേണ്ടതുണ്ട്. ഞങ്ങളുടെ ഇയനിലം വഴിയോ സാമുഹിക ഊടകങ്ങള്‍ വഴിയോ നിങ്ങൾക്ക് ഞങ്ങളുമായി ഇടപെടാം. കുറിപ്പുകള്‍  ടെക്സ്റ്റ് (TXT), റിച്ച് ടെക്സ്റ്റ് (DOCX, DOC, ODF), PDF* അല്ലെങ്കില്‍ മാര്‍ക്ക്ഡൗണ്‍ (MD) മുറകളില്‍ ഞങ്ങള്‍ക്ക് അയച്ചുതരാം. എഴുത്തുകള്‍ നോക്കിക്കഴിഞ്ഞു  വെളിയില്‍വിടുന്നതായിരിക്കും. നിങ്ങൾക്ക് ഇങ്കിരീസ് , തെലുങ്ക്, മലയാളം, കന്നട , തമിഴ്, തുളു **, ഗോണ്ടി, ബംഗാളി എന്നിവയില്‍ തനതായി എഴുത്ത് മുറയുള്ളവയോ അല്ലെങ്കില്‍ യൂണിക്കോഡ് പിന്തുണയ്ക്കുന്ന ലിപിയിലോ മറ്റു മൊഴികളിലും എഴുത്തുകളയക്കാം.</p>
+<p>ഈ ഇയനിലത്തില്‍ ഒരു കുറിപ്പ് ഇടുന്നതിനായി ഞങ്ങളെ അറിയിക്കേണ്ടതുണ്ട്. ഞങ്ങളുടെ ഇയനിലം വഴിയോ സാമുഹിക ഊടകങ്ങള്‍ വഴിയോ നിങ്ങൾക്ക് ഞങ്ങളുമായി ഇടപഴകാം. കുറിപ്പുകള്‍  ടെക്സ്റ്റ് (TXT), റിച്ച് ടെക്സ്റ്റ് (DOCX, DOC, ODF), PDF* അല്ലെങ്കില്‍ മാര്‍ക്ക്ഡൗണ്‍ (MD) മുറകളില്‍ ഞങ്ങള്‍ക്ക് അയച്ചുതരാം. എഴുത്തുകള്‍ നോക്കിക്കഴിഞ്ഞു  വെളിയില്‍വിടുന്നതായിരിക്കും. നിങ്ങൾക്ക് ഇങ്കിരീസ് , തെലുങ്ക്, മലയാളം, കന്നട , തമിഴ്, തുളു **, ഗോണ്ടി, ബംഗാളി എന്നിവയില്‍ തനതായി എഴുത്ത് മുറയുള്ളവയോ അല്ലെങ്കില്‍ യൂണിക്കോഡ് പിന്തുണയ്ക്കുന്ന ലിപിയിലോ മറ്റു മൊഴികളിലും എഴുത്തുകളയക്കാം.</p>
 <p>* നിങ്ങളുടെ കുറിപ്പ് ലത്തീന്‍ ലിപിയിലാണെങ്കില്‍ മുറ്റും നിങ്ങള്‍ അത് ഞങ്ങള്‍ക്കു അയച്ചു തരിക. <br><br></p>
 <h4 id="2-കയലകകലന-വണട">2. കയലാക്കലിനു വേണ്ടി</h4>
-<p>നിങ്ങൾ ഒരു പൊരുള്‍ക്കുറവുള്ളതായ മൊഴി തനതായി മിണ്ടുന്നയാള്‍ ആണെങ്കില്‍ അല്ലെങ്കിൽ അത്തരത്തിലുള്ളവയെക്കുറിച്ച്  തെളിവായ അറിവുണ്ടെങ്കിലോ, നിങ്ങൾക്ക് അത് കയലാക്കുവാനായി ഞങ്ങളുമായി ഇടപെടാവുന്നതാണ്.</p>
+<p>നിങ്ങൾ ഒരു പൊരുള്‍ക്കുറവുള്ളതായ മൊഴി തനതായി മിണ്ടുന്നയാള്‍ ആണെങ്കില്‍ അല്ലെങ്കിൽ അത്തരത്തിലുള്ളവയെക്കുറിച്ച്  തെളിവായ അറിവുണ്ടെങ്കിലോ, നിങ്ങൾക്ക് അത് കയലാക്കുവാനായി ഞങ്ങളുമായി ഇടപഴകാവുന്നതാണ്.</p>
 <p>കയലാക്കലിനു വേണ്ടി ഉറ്റുചേരുന്നതിനു മുമ്പ് കവനിക്കേണ്ടവ.</p>
 <ol>
 <li>ഒലിപ്പനുവലിനെക്കുറിച്ചുള്ള (phonology) അറിവ്.</li>
@@ -184,7 +184,7 @@ if (!doNotTrack) {
 <h4 id="4-പങകടകകനനവരട-ഉളള-ചമതല">4. പങ്കെടുക്കുന്നവരോട് ഉള്ള ചുമതല</h4>
 <p>ഞങ്ങളുടെ ഉഴക്കത്തിലുള്ള പങ്കാളികളുടെ പേരോ മറ്റ് വിവരങ്ങളോ അവരുടെ അറിവില്ലാതെ പുറത്തു വിടുന്നതല്ല. <br><br></p>
 <h4 id="5-ആളവക-വവരങങളട-ശകരണ">5. ആള്‍വക വിവരങ്ങളുടെ ശേകരണം</h4>
-<p>ഞങ്ങളുടെ ഇടപെടല്‍ താളിലൂടെ ഞങ്ങളുമായി ഉറ്റുചേരുന്നവരുടെ മിന്നഞ്ചല്‍ നെറിയല്‍ ഞങ്ങള്‍ ശേകരിക്കും,
+<p>ഞങ്ങളുടെ &lsquo;ഇടപഴകല്‍&rsquo; താളിലൂടെ ഞങ്ങളുമായി ഉറ്റുചേരുന്നവരുടെ മിന്നഞ്ചല്‍ നെറിയല്‍ ഞങ്ങള്‍ ശേകരിക്കും,
 അത്തരം വിവരങ്ങൾ മറ്റാരുമായും ഞങ്ങള്‍ പങ്കുവയ്ക്കാറില്ല. <br><br></p>
 <h4 id="6--ആളവക-വവരങങളട-കകകനനത">6.  ആള്‍വക വിവരങ്ങളുടെ കാക്കുന്നത്.</h4>
 <p>ഞങ്ങൾ‌ നൽ‌കുന്ന ഉറവിടങ്ങളിലും കരുവികളിലും നിങ്ങളുടെ വിവരങ്ങള്‍ പൊതുവെ ശേകരിക്കുന്നതല്ല. <br><br></p>
