--- a/te/products/index.html
+++ b/te/products/index.html
@@ -134,28 +134,29 @@ if (!doNotTrack) {
 
 
 
-<section class="section">
-  <div class="container">
+
+
+<section class="portfolio-work">
+  <div class="product-container">
     <div class="row">
-      <div class="col-lg-12">
-        <div class="container" style="
-background: #fff;
-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-padding: 20px;
-border-radius: 15px;
-">
- <p><h1 id="తవరల">త్వరలో</h1>
-</p>
-</div>
-
-
-
+      <div class="col-md-12">
+        <div class="block">
+          <div class="product-menu">
+            <div data-toggle="buttons">
+              <label class="product-btn"> 
+                <input type="radio" name="shuffle-filter" value="all" checked="checked"><span>అన్నీ</span>
+              </label>
+              
+            </div>
+          </div>
+          <div class="row shuffle-wrapper">
+            
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </section>
-
-
 
 <footer class="footer">
   <div class="container">
