--- a/products/index.html
+++ b/products/index.html
@@ -153,6 +153,15 @@ if (!doNotTrack) {
           </div>
           <div class="row shuffle-wrapper">
             <div class="col-md-4 portfolio-item shuffle-item" data-groups="[&#34;fonts&#34;]">
+              <img class="ima" src="/images/prothumbs/darega.png" alt="Tulu Font">
+              <div class="product-hover">
+                <div class="product-content">
+                  <a href="/images/prothumbs/darega.png" class="portfolio-popup"><i></i></a>
+                  <a class="h3" href="/products/dareg/">Tulu Font</a>
+                  <p>Darage v1.1 Traditional Tulu Font</p>
+                </div>
+              </div>
+            </div><div class="col-md-4 portfolio-item shuffle-item" data-groups="[&#34;fonts&#34;]">
               <img class="ima" src="/images/prothumbs/majani.png" alt="Ghughariyo Mahajani Unicode">
               <div class="product-hover">
                 <div class="product-content">
