--- a/project/ghughario/index.html
+++ b/project/ghughario/index.html
@@ -176,9 +176,8 @@ if (!doNotTrack) {
 <p>For enquiries, reach out to us through <a href="mailto:dclprogramme@gmail.com">dclprogramme@gmail.com</a></p>
 <p>Follow us on<br>
 <a href="https://www.instagram.com/idclang/">Instagram</a> |
-<a href="https://www.youtube.com/channel/UC_xQ83x2V3Oj5uWfLbUK8Tg">Youtube</a>
-|
-<a href="https://www.facebook.com/dclp.lang.3/">Facebook</a></p>
+<a href="https://www.youtube.com/channel/UC_xQ83x2V3Oj5uWfLbUK8Tg">Youtube</a> |
+<a href="https://www.facebook.com/dclp.lang.3/">Facebook</a> | <a href="https://twitter.com/idclang">Twitter</a></p>
 
         </div>
       </div>
