--- a/ml/index.html
+++ b/ml/index.html
@@ -128,7 +128,7 @@ if (!doNotTrack) {
       <div class="col-md-12">
         <div class="block">
           <h1>ദ്രമിള കലമുറയ്ക്കും മൊഴികള്‍ക്കുമായുള്ള തുടമാനം</h1>
-          <p>കാക്കുക കേമമാക്കുക!</p>
+          <p>കാക്കുക കേമമാക്കുക! <br> <a href="/ml/pages/pacha-malayalam/">പച്ച മലയാളത്തെക്കുറിച്ച് വായിക്കാം!</a></p>
 
           
           
