--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <title>Home</title>
-</head>
-<body>
-    <div class="menu-bar">
-        <ul>
-            <li>Blog</li>
-            <li>Typestudio</li>
-            <li>Tools</li>
-            <li>Projects</li>
-            <li>About</li>
-        </ul>
-    </div>
-    <section class="main" style="padding: 10px;">
-    <h1 style="color: aliceblue;font-size: 7em;">IDCL.Coming soon!</h1>
-    <p style="color: aliceblue;font-size: 2em; padding:  0px 10px;text-align: center;">ഐ.ഡി.സി.എൽ. ഉടൻ വരുന്നു!&nbsp&nbsp&nbsp&nbspஐ.டி.சி.எல். விரைவில்!</p>
-    <p style="color: aliceblue;font-size: 2em; padding: 0px 10px;text-align: center;">ಐ.ಡಿ.ಸಿ.ಎಲ್. ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ!&nbsp&nbsp&nbsp&nbspఐ.డి.సి.ఎల్. త్వరలో!</p>
-    </section>
-    
-</body>
-</html>
+<!doctypehtml><html lang=en><meta charset=utf-8 /><meta content="IE=edge"http-equiv=X-UA-Compatible><meta content="width=device-width,initial-scale=1"name=viewport><link href=/styles/common.css rel=stylesheet /><link href=/styles/accu.css rel=stylesheet /><script src=/src/template.js></script><title>TypeStudio</title><nav><a href=# class=logo>IDCL</a><ul><li><a href=index.html class=active-link>TypeStudio</a><li><a href=news.html>News</a><li><a href=tools.html>Tools</a><li><a href=about.html>About</a><li><a href=help.html>Help</a></ul><button id=menu><span>MENU</span></button></nav><section><div class=tab><button class=tablinks onclick='openTab(event,"Tab1")'id=defaultOpen>Unicode</button> <button class=tablinks onclick='openTab(event,"Tab2")'>Legacy</button> <button class=tablinks onclick='openTab(event,"Tab3")'>Custom</button></div><div class=tabcontent id=Tab1><h3>Unicode Fonts</h3><details><summary>Expand</summary><p>Fonts with Unicode support for different languages. Unicode fonts are becoming increasingly popular as they allow people to read and write in their own language across different platforms with ease.</details><details><summary>Filters</summary><div id=filter-btns><button class="btn active"onclick='filterSelection("all")'>Show all</button> <button class=btn onclick='filterSelection("ml")'>Malayalam</button> <button class=btn onclick='filterSelection("kn")'>Kannada</button> <button class=btn onclick='filterSelection("ta")'>Tamil</button> <button class=btn onclick='filterSelection("ten")'>Telugu</button> <button class=btn onclick='filterSelection("hi")'>Hindi</button> <button class=btn onclick='filterSelection("en")'>English</button></div></details><div class=font-section><div class="filterDiv hi"style=font-family:NiraMahajani-Bold,monospace><h3 class=font-label>Nira Mahajani</h3><p class=sample contenteditable=true>𑅭𑅯𑅓 𑅬𑅐𑅧𑅯𑅐𑅱 𑅰𑅯𑅣𑅧𑅣𑅭𑅐𑅱 𑅰𑅬𑅒𑅣𑅨𑅧𑅧𑅐𑅱 𑅯𑅭𑅣𑅧𑅣𑅓 𑅐𑅨𑅑 𑅙</p><button class="btn explore"><a href=pages/nira-mahajani.html>Explore</a></button></div></div></div><div class=tabcontent id=Tab2><h3>Legacy Fonts</h3><details><summary>Expand</summary><p>Also known as hackfonts, these are fonts based on the Latin unicode endpoints. Legacy fonts are still widely used in India.</details></div><div class=tabcontent id=Tab3><h3>Custom Fonts</h3><details><summary>Expand</summary><p>Custom fonts for writing systems with no unicode support. You can also find fonts for historical scripts here.</details></div></section><main-footer></main-footer><script src=/src/support.js></script>
